denuncias-dev/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2023-05-18T20:33:53Z"
    creationTimestamp: "2023-05-18T20:33:50Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: api-integracion
    namespace: denuncias-dev
    resourceVersion: "6254367"
    uid: 42293ef2-5bb8-4040-a17f-3e15fcf120d8
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:33:50Z"
    labels:
      app: dptc-cron001-reportes
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-cron001-reportes
    namespace: denuncias-dev
    resourceVersion: "6254240"
    uid: 59e6b00c-af12-4f89-aae6-15733608f9fb
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2023-05-18T20:33:53Z"
    creationTimestamp: "2023-05-18T20:33:50Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-serv001-denuncia
    namespace: denuncias-dev
    resourceVersion: "6254378"
    uid: b9ad1b52-1d2e-4373-bf55-513df4a3b82a
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-08-02T12:19:53Z"
    creationTimestamp: "2023-05-18T20:33:50Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-serv002-bff
    namespace: denuncias-dev
    resourceVersion: "494752038"
    uid: 5927736f-80a5-426b-8e8b-eb2c97c98932
  subsets:
  - notReadyAddresses:
    - ip: 10.130.20.108
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: dptc-serv002-bff-1-spnfd
        namespace: denuncias-dev
        resourceVersion: "494752032"
        uid: 021c8b71-cd5e-4975-8943-2e83877c164b
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:33:50Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: front001-denuncias
    namespace: denuncias-dev
    resourceVersion: "476624832"
    uid: 6e084815-4cab-4242-98e2-fb774146e25e
  subsets:
  - addresses:
    - ip: 10.130.20.106
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: front001-denuncias-1-sclc6
        namespace: denuncias-dev
        resourceVersion: "476624831"
        uid: 30a3ff9e-5e92-435c-a46c-ec43656fc34e
    ports:
    - name: 8080-tcp
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:33:50Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: proxy001-serv-externos
    namespace: denuncias-dev
    resourceVersion: "476624829"
    uid: 845fffea-e470-490c-9b66-2f6f7cf54dad
  subsets:
  - addresses:
    - ip: 10.130.20.105
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: proxy001-serv-externos-1-gz2z4
        namespace: denuncias-dev
        resourceVersion: "476624827"
        uid: 84d8d54b-d39a-45ff-aa3b-4cd1129f80f9
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
