denuncias-dev/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:33:53Z"
    generateName: api-integracion-
    generation: 1
    labels:
      app: api-integracion
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: api-integracion
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: api-integracion-8xrm8
    namespace: denuncias-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: api-integracion
      uid: 0814905a-2470-4933-82f9-459a69cb063f
    resourceVersion: "476054035"
    uid: c4a53b13-e8e0-4b5c-93e8-f5674a22180f
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:33:53Z"
    generateName: dptc-cron001-reportes-
    generation: 1
    labels:
      app: dptc-cron001-reportes
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: dptc-cron001-reportes
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-cron001-reportes-2hslr
    namespace: denuncias-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: dptc-cron001-reportes
      uid: 1ab29847-7033-46d9-a8ef-a731907e138e
    resourceVersion: "476054070"
    uid: b13e9f61-c186-452b-babf-ad076b7560af
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:33:53Z"
    generateName: dptc-serv001-denuncia-
    generation: 1
    labels:
      app: dptc-serv001-denuncia
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-serv001-denuncia-dkftl
    namespace: denuncias-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: dptc-serv001-denuncia
      uid: 7fe4a666-b363-4d7f-9624-c096346117ce
    resourceVersion: "476054025"
    uid: d1bdc438-a5ad-4044-9235-705e0564bddf
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.20.108
    conditions:
      ready: false
      serving: false
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: dptc-serv002-bff-1-spnfd
      namespace: denuncias-dev
      resourceVersion: "494752032"
      uid: 021c8b71-cd5e-4975-8943-2e83877c164b
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-08-02T12:19:53Z"
    creationTimestamp: "2023-05-18T20:33:53Z"
    generateName: dptc-serv002-bff-
    generation: 206349
    labels:
      app: dptc-serv002-bff
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-serv002-bff-9xs8h
    namespace: denuncias-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: dptc-serv002-bff
      uid: 64956fd4-6d31-446b-88bd-c2dfa5053db5
    resourceVersion: "494752034"
    uid: 0317a97d-c62a-474c-9c20-44a2e8f494bc
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.20.106
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: front001-denuncias-1-sclc6
      namespace: denuncias-dev
      resourceVersion: "476624831"
      uid: 30a3ff9e-5e92-435c-a46c-ec43656fc34e
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:33:53Z"
    generateName: front001-denuncias-
    generation: 43
    labels:
      app: front001-denuncias
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: front001-denuncias-ctcgz
    namespace: denuncias-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: front001-denuncias
      uid: ca56c6cc-5355-4487-b652-c169a7db1116
    resourceVersion: "476624836"
    uid: 9b609033-ad1a-48e9-8d09-b8a49d62c0c3
  ports:
  - name: 8080-tcp
    port: 3000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.20.105
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: proxy001-serv-externos-1-gz2z4
      namespace: denuncias-dev
      resourceVersion: "476624827"
      uid: 84d8d54b-d39a-45ff-aa3b-4cd1129f80f9
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:33:53Z"
    generateName: proxy001-serv-externos-
    generation: 43
    labels:
      app: proxy001-serv-externos
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: proxy001-serv-externos-sdqm8
    namespace: denuncias-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: proxy001-serv-externos
      uid: 436de640-2640-445f-bc5d-35071176903c
    resourceVersion: "476624828"
    uid: 020dccca-d731-4321-827c-43b880b29f2c
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
