denuncias-dev/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-18T20:33:52Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: api-integracion
    namespace: denuncias-dev
    resourceVersion: "6254350"
    uid: 77df9b31-5e14-493b-89af-2c7a3d7dc31a
  spec:
    host: api-integracion-denuncias-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: api-integracion
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:33:52Z"
        status: "True"
        type: Admitted
      host: api-integracion-denuncias-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-18T20:33:52Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-serv001-denuncia
    namespace: denuncias-dev
    resourceVersion: "6254352"
    uid: 5f42236b-36f8-4af1-9859-528ab10441c1
  spec:
    host: dptc-serv001-denuncias-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: dptc-serv001-denuncia
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:33:52Z"
        status: "True"
        type: Admitted
      host: dptc-serv001-denuncias-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-18T20:33:52Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-serv002-bff
    namespace: denuncias-dev
    resourceVersion: "6254355"
    uid: d7abf870-aa5c-4a6a-a168-126db9eb2ead
  spec:
    host: dptc-serv002-denuncias-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: dptc-serv002-bff
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:33:52Z"
        status: "True"
        type: Admitted
      host: dptc-serv002-denuncias-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:33:53Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: front001-denuncias
    namespace: denuncias-dev
    resourceVersion: "6254359"
    uid: 56e27da7-3a71-4a8b-bc6f-dd009d82a4f3
  spec:
    host: front001-denuncias-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: front001-denuncias
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:33:53Z"
        status: "True"
        type: Admitted
      host: front001-denuncias-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-18T20:33:53Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: proxy001-serv-externos
    namespace: denuncias-dev
    resourceVersion: "6254361"
    uid: f6a2e2ca-1369-49ca-a6d2-5a77a923e3fa
  spec:
    host: proxy001-denuncias-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: proxy001-serv-externos
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-18T20:33:53Z"
        status: "True"
        type: Admitted
      host: proxy001-denuncias-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
