denuncias-dev/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:33:53Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: api-integracion
    namespace: denuncias-dev
    resourceVersion: "6254366"
    uid: 0814905a-2470-4933-82f9-459a69cb063f
  spec:
    clusterIP: 172.30.21.73
    clusterIPs:
    - 172.30.21.73
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: api-integracion
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:33:53Z"
    labels:
      app: dptc-cron001-reportes
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-cron001-reportes
    namespace: denuncias-dev
    resourceVersion: "6254371"
    uid: 1ab29847-7033-46d9-a8ef-a731907e138e
  spec:
    clusterIP: 172.30.171.121
    clusterIPs:
    - 172.30.171.121
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: dptc-cron001-reportes
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:33:53Z"
    labels:
      app: dptc-serv001-denuncia
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-serv001-denuncia
    namespace: denuncias-dev
    resourceVersion: "6254376"
    uid: 7fe4a666-b363-4d7f-9624-c096346117ce
  spec:
    clusterIP: 172.30.95.176
    clusterIPs:
    - 172.30.95.176
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: dptc-serv001-denuncia
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:33:53Z"
    labels:
      app: dptc-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: dptc-serv002-bff
    namespace: denuncias-dev
    resourceVersion: "6254382"
    uid: 64956fd4-6d31-446b-88bd-c2dfa5053db5
  spec:
    clusterIP: 172.30.2.205
    clusterIPs:
    - 172.30.2.205
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: dptc-serv002-bff
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:33:53Z"
    labels:
      app: front001-denuncias
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: front001-denuncias
    namespace: denuncias-dev
    resourceVersion: "6254387"
    uid: ca56c6cc-5355-4487-b652-c169a7db1116
  spec:
    clusterIP: 172.30.160.178
    clusterIPs:
    - 172.30.160.178
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 3000
    selector:
      deploymentconfig: front001-denuncias
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:33:53Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 6ff14eb9-893c-41c2-b14c-e7a903b73093
      migration.openshift.io/migrated-by-migplan: 00366fb0-8e8e-4301-948a-980b177c294d
      velero.io/backup-name: migration-6bbf3-initial-4mzmx
      velero.io/restore-name: migration-6bbf3-final-zvlf7
    name: proxy001-serv-externos
    namespace: denuncias-dev
    resourceVersion: "6254392"
    uid: 436de640-2640-445f-bc5d-35071176903c
  spec:
    clusterIP: 172.30.41.140
    clusterIPs:
    - 172.30.41.140
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: proxy001-serv-externos
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
